# RL_control_project

./: CMakeLists.txt  CMakeLists_previous.txt  README.md
Logs/: 3D_motion_humanoid.py  left_leg_humanoid.py  log.csv  replay_VLA_RL_control.py  right_leg_humanoid.py  vla_log.csv
src/: main.cpp
src/RL/: CMakeLists.txt  log_vla.csv  policy.cpp  policy.h  replay_motion_VLA.py  train_vla.cpp  vla.cpp  vla.h  vla_policy.cpp  vla_policy.h
src/control/: pid.cpp  pid.h
src/robot/: humanoid.cpp  humanoid.h
src/system/: latency.cpp  latency.h  logger.h
